- Feature: Sharper looking math formulas by referencing Wikipedia's PNGs directly
- Feature: Add White background to transparent images for better reading on clients with dark mode
- Feature: Serve media with proper extension, mimetype, for better downloading (easier to tell if something is an animated GIF, etc)
- Fix: Newlines in captions (Project Gutenberg article)
- Feature: support image maps on all images, not just timelines (Broadway theatre article)
- Fix: complete parser rewrite that supports more content without special case handling, and fixes rendering errors
- Feature: Includes search snippet in search results
- Feature: Use the 1.5x image if 2x image is not available
- Feature: Support for Image Galleries (images would show up using generic media finder, but wasn't getting the appropriate caption)
- Feature: Add links to search for other pages about an article
- Feature: Added Featured Content view from front page of Wikipedia. Contains Featured Article and most popular pages
- Feature: Geographic view! Extracts coordinates and provides links to OpenStreetMaps and native Map apps
- Feature: Find articles near another article
- Feature: Support chemical and physics formulas by converting subscripts and superscript tags into Unicode Subscript/Superscript characters!
- Feature: Support side-by-side comparisons in Infoboxes (basicaly any article about a conflict, .e.g. World War II)
- Fix: Better handling of nested tables in Infoboxes
- Fix: Ignore links to Wikidata
- Feature: Support multiple Wikipedia languages
- Fix: Handle empty infoboxes
- Fix: Handle empty rows/empty tables
- Fix: handle malformed colspans
- Fix: handle incorrect nested headers (H1 in output)
- Fix: handle geo coordinates with missing levels of precision
- Feature: Add support for Simple English Wikipedia
- Fix: Added support for new media HTML structure. See: https://www.mediawiki.org/wiki/Parsoid/Parser_Unification/Media_structure/FAQ