@@ -53,3 +53,4 @@
 - Fix: handle geo coordinates with missing levels of precision
 - Feature: Add support for Simple English Wikipedia
 - Fix: Added support for new media HTML structure. See: https://www.mediawiki.org/wiki/Parsoid/Parser_Unification/Media_structure/FAQ
+- Fix: Better detection of geohack URLs allowed for more links to be displayed
